--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="stylesheet.css">
     
         <!-- Data file -->
-        <script src="src/data.js"></script>
+        <script src="index.js"></script>
         <!-- JavaScript file -->
         <!-- defer - this file will load after the DOM loads -->
-        <script defer src="src/index.js"></script>
+        
 
         <title>Jokester</title>
     </head>
