Fix likeCounter, create form

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         <main>
             <div id="joke_container">
             </div>
+            <div id="form_container">
+                <form id="submit_joke">
+                    <h2>Submit a Joke!</h2>
+
+                    <input type="text" name="joke_setup" placeholder="Enter your joke's setup..."/>
+                    <br/>
+                    <input type="text" name="joke_delivery" placeholder="Enter your joke's delivery..."/>
+                    <br/>
+                    <input type="submit" value="Submit Joke"/>
+
+                </form>
+            </div>
         </main>
     </body>
 
