--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
                 <form id="submit_joke">
                     <h2>Submit a Joke!</h2>
 
-                    <input type="text" name="joke_setup" placeholder="Enter your joke's setup..."/>
+                    <textarea class="textarea" id="joke_setup" placeholder="Enter your joke's setup..."></textarea>
                     <br/>
-                    <input type="text" name="joke_delivery" placeholder="Enter your joke's delivery..."/>
+                    <br/>
+                    <textarea class="textarea" id="joke_delivery" placeholder="Enter your joke's delivery..."></textarea>
+                    <br/>
                     <br/>
                     <input type="submit" value="Submit Joke"/>
+                    <br/>
 
                 </form>
             </div>
