Persist all checkboxes to db. Only 'false' work

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                     <textarea class="textarea" id="joke_delivery" placeholder="Enter your joke's delivery..."></textarea>
                     <br/>
                     <br/>
-                    <!-- <h4>Does your joke fall under any of these categories?</h4>
+                    <h4>Does your joke fall under any of these categories?</h4>
                     <h6></h6>(Select all that apply)</h6>
                     <br/>
-                    <input type="checkbox" name="flag-1" id="nsfw" /> Not Safe for Work <br />
-                    <input type="checkbox" name="flag-2" id="religious" />Religious<br />
+                    <input type="checkbox" type="hidden" name="nsfw" id="nsfw" value="false" unchecked/> Not Safe for Work <br />
+                    <input type="checkbox" type="hidden" name="flag-2" id="religious" value="false" />Religious<br />
                     <input type="checkbox" name="flag-3" id="political" />Political<br />
                     <input type="checkbox" name="flag-4" id="racist" />Racist<br />
                     <input type="checkbox" name="flag-5" id="sexist" />Sexist <br />
-                    <input type="checkbox" name="flag-6" id="explicit" />Explicit <br /> -->
+                    <input type="checkbox" name="flag-6" id="explicit" />Explicit <br />
                     <input type="submit" value="Submit Joke"/>
                     <br/>
 
