Use setAttribute on nsfwCheckbox

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <h4>Does your joke fall under any of these categories?</h4>
                     <h6></h6>(Select all that apply)</h6>
                     <br/>
-                    <input type="checkbox" type="hidden" name="nsfw" id="nsfw" value="false" unchecked/> Not Safe for Work <br />
-                    <input type="checkbox" type="hidden" name="flag-2" id="religious" value="false" />Religious<br />
+                    <input type="checkbox" name="nsfw" id="nsfw" value="false" /> Not Safe for Work <br />
+                    <input type="checkbox" type="hidden" name="flag-2" id="religious"/>Religious<br />
                     <input type="checkbox" name="flag-3" id="political" />Political<br />
                     <input type="checkbox" name="flag-4" id="racist" />Racist<br />
                     <input type="checkbox" name="flag-5" id="sexist" />Sexist <br />
