Set false default on all checkboxes

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <h6></h6>(Select all that apply)</h6>
                     <br/>
                     <input type="checkbox" name="nsfw" id="nsfw" value="false" /> Not Safe for Work <br />
-                    <input type="checkbox" type="hidden" name="flag-2" id="religious"/>Religious<br />
-                    <input type="checkbox" name="flag-3" id="political" />Political<br />
-                    <input type="checkbox" name="flag-4" id="racist" />Racist<br />
-                    <input type="checkbox" name="flag-5" id="sexist" />Sexist <br />
-                    <input type="checkbox" name="flag-6" id="explicit" />Explicit <br />
+                    <input type="checkbox" type="hidden" name="flag-2" id="religious" value="false"/>Religious<br />
+                    <input type="checkbox" name="flag-3" id="political" value="false"/>Political<br />
+                    <input type="checkbox" name="flag-4" id="racist" value="false" />Racist<br />
+                    <input type="checkbox" name="flag-5" id="sexist" value="false"/>Sexist <br />
+                    <input type="checkbox" name="flag-6" id="explicit" value="false"/>Explicit <br />
                     <input type="submit" value="Submit Joke"/>
                     <br/>
 
